--- a/index.html
+++ b/index.html
@@ -7,17 +7,38 @@
 </head>
 <body>
 <div id="ch"></div>
-
-<script src="script.js">
+<div id="hi"><pre>
+    <center><img src="logos/logo.svg" alt="" width="300px"></center>
+    Welcome to the renard.js demo.
+    if you want read the documentation go <a href="https://github.com/yefee8/renardjs">github</a>
+<center>go  3000px ►</center>
+</pre>
+</div>
+<div style="
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 35px;
+font-family: -apple-system;
+position: absolute;left:1500px;top: 0;
+color:white;
+">
+end!
+</div>
+<script src="./script.js">
 </script>
 <script>
     character = 'ch';
     speed = 100
     jump = true
     jumpPower = 100
-    bottom = 200;
+    bottom = 100;
     fallSpeed = 250
     chWidth = 100
+    rightLimit = 0
+    leftLimit = 3000
 </script>
 </body>
 </html>
