--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>renardjs</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./logos/logonobg.png">
+    <meta name="description" content="Open source game framework for JavaScript, Renard.js / Renardjs">
+    <meta name="author" content="Yefee">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Renard, Renardjs, Renard.js, Game, Library, JavaScript game library, js, js game library, framework, js game framework, javascript game framework">
 </head>
 <body>
 <div id="ch"></div>
@@ -30,15 +34,15 @@ end!
 <script src="./script.js">
 </script>
 <script>
-    character = 'ch';
-    speed = 100
+    character = 'ch'; 
+    speed = 100 
     jump = true
     jumpPower = 100
     bottom = 100;
     fallSpeed = 250
-    chWidth = 100
-    rightLimit = 0
-    leftLimit = 3000
+    chWidth = 100 
+    rightLimit = 0 
+    leftLimit = 3000 
 </script>
 </body>
 </html>
