--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="description" content="Open source game framework for JavaScript, Renard.js / Renardjs">
     <meta name="author" content="Yefee">
     <meta name="keywords" content="HTML, CSS, JavaScript, Renard, Renardjs, Renard.js, Game, Library, JavaScript game library, js, js game library, framework, js game framework, javascript game framework">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TZ840SZ5K4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TZ840SZ5K4');
+</script>
+    
 </head>
 <body>
 <div id="ch"></div>
