--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <meta name="author" content="Yefee">
     <meta name="keywords" content="HTML, CSS, JavaScript, Renard, Renardjs, Renard.js, Game, Library, JavaScript game library, js, js game library, framework, js game framework, javascript game framework">
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T9E4NMSSED"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8FVBBG6L96"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){
-  dataLayer.push(arguments);
-  }
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-T9E4NMSSED');
+
+  gtag('config', 'G-8FVBBG6L96');
 </script>
 </head>
 <body>
