--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-8FVBBG6L96');
 </script>
     <meta charset="UTF-8">
-    <title>renardjs</title>
+    <title>renardjs demo - javascript game framework / library</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./logos/logonobg.png">
     <meta name="description" content="Open source game framework for JavaScript, Renard.js / Renardjs">
