speed bug solved

--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8FVBBG6L96"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8FVBBG6L96');
-</script>
     <meta charset="UTF-8">
-    <title>renardjs demo - javascript game framework / library</title>
+    <title>renardjs</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./logos/logonobg.png">
     <meta name="description" content="Open source game framework for JavaScript, Renard.js / Renardjs">
@@ -23,7 +14,7 @@
 <div id="hi"><pre>
     <center><img src="logos/logo.svg" alt="" width="300px"></center>
     Welcome to the renard.js demo.
-    if you want read the documentation go <a href="https://github.com/yefee8/renardjs">github</a>
+    if you want read the documentation go <a href="./script.js">github</a>
 <center>go  3000px ►</center>
 </pre>
 </div>
@@ -40,18 +31,18 @@ color:white;
 ">
 end!
 </div>
-<script src="./script.js">
+<script src="https://yefee8.github.io/renardjs/script.js"></script>
 </script>
 <script>
-    character = 'ch'; 
-    speed = 100 
+    character = 'ch'; //
+    speed = 100 //
     jump = true
     jumpPower = 100
     bottom = 100;
     fallSpeed = 250
-    chWidth = 100 
-    rightLimit = 3000
-    leftLimit =  0
+    chWidth = 100 //
+    rightLimit = 0 //
+    leftLimit = 3000 //
 </script>
 </body>
 </html>
