--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>renardjs</title>
+    <title>Basic JavaScript game framework / library - renardjs / renard.js </title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./logos/logonobg.png">
     <meta name="description" content="Open source game framework for JavaScript, Renard.js / Renardjs">
@@ -12,9 +12,9 @@
 <body>
 <div id="ch"></div>
 <div id="hi"><pre>
-    <center><img src="logos/logo.svg" alt="" width="300px"></center>
+    <center><img src="logos/logo.svg" alt="renard.js logo" width="300px"></center>
     Welcome to the renard.js demo.
-    if you want read the documentation go <a href="./script.js">github</a>
+    if you want read the documentation go <a href="https://github.com/Yefee8/renardjs/">github</a>
 <center>go  3000px ►</center>
 </pre>
 </div>
@@ -34,15 +34,15 @@ end!
 <script src="https://yefee8.github.io/renardjs/script.js"></script>
 </script>
 <script>
-    character = 'ch'; //
-    speed = 100 //
+    character = 'ch'; 
+    speed = 100 
     jump = true
     jumpPower = 100
     bottom = 100;
     fallSpeed = 250
-    chWidth = 100 //
-    rightLimit = 0 //
-    leftLimit = 3000 //
+    chWidth = 100 
+    rightLimit = 0 
+    leftLimit = 3000 
 </script>
 </body>
 </html>
