--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="c"></div>
 <script src="./main.js"></script>
 <script>
-    useMoveSys('ch', 100, 100,0, 2 * window.innerWidth);
+    useMoveSys('ch', 100, 100, 0, 2 * window.innerWidth);
 </script>
 </body>
 </html>
